<resources>
    <!--Strings main Activity-->
    <string name="app_name">FiveWaysToSaveEnergy</string>
    <string name="app_info">Presentamos 5 formas de ahorrar energía.</string>
    <!--Strings Texts Description-->
    <string name="iluminacion">• Aprovecha la luz natural al máximo, durante el día evita encender
        focos en habitaciones iluminadas por el sol.\n• Cambia todos los focos por unos de bajo
        consumo, ya que consumen cuatro veces menos energía y duran hasta diez veces más. \n• Y aún
        así apágalos cuando no estés en la habitación.</string>
    <string name="computadora">• Al trabajar con tu Pc de escritorio o Portátil, desconectarlos
        por completo cuando termines de utilizarlo.\n•  Si vas a hacer una pausa, cierra el portátil
        o apaga el monitor.\n• Configura siempre en el modo de ahorro de energía para este en
        automático de todas formas.</string>
    <string name="electrodomestico">• Desconecta todos los aparatos eléctricos que lo que no
        utilices. La televisión, estéreo, radio, la batería del celular al terminar de cargarlo,
        licuadoras, microondas, etc.\n• Al terminar de utilizarlos, evita dejar estos aparatos
        en modo de espera, significará eliminar el “consumo fantasma” en casa.
        \n• Este consumo Fantasma representa un 5% del consumo promedio.</string>
    <string name="Refrigerador">• Es importante colocar la nevera en un lugar con al menos 5 cms de
        separación para permitir la circulación del aire.\n• Instalarlo lejos de los rayos solares,
        estufas, el calentador de agua y otras fuentes de calor.\n• También debemos observar que
        la puerta cierre herméticamente y no deje escapar aire frío.\n• Evitar introducir alimentos
        calientes, pues todos éstos son hábitos que aumentan el consumo energético de nuestra
        nevera.</string>
    <string name="Lavadora">• Hay que tratar de llenarla con la cantidad máxima de ropa indicada,
        ya que si pone menos, gastaremos agua y electricidad innecesaria. \n• Si por contra se pone
        más ropa de lo permitido, esta ropa quedará mal lavada y se corre el riesgo de forzar el motor.
        \n• También es importante utilizar agua fría para lavar, y usar la secadora sólo en época
        de lluvias, cuando la ropa no se pueda secar rápidamente al aire libre.</string>



    <!--Strings Calculator Energy-->
    <string name="app_name_calculadora">Calculadora de Consumo</string>
    <string name="infocalcu">Calcule el valor de su consumo diario!!</string>
    <string name="infocalcutexto">Indiquemos de su factura el número de Kw consumidos y el precio
    al que se le cobran los Kwh y le informaremos el precio por día que gasta en energía electrica.</string>
    <string name="textConsumo">Cantidad de Kws consumidos: </string>
    <string name="textPriceKwh">Precio Kwh: </string>
    <string name="tipoFactura">¿Por favor, díganos si su factura es Trimestral o Bimestral?</string>

    <string name="tab1">Iluminacion</string>
    <string name="tab2">Nevera</string>
    <string name="tab3">Tv</string>
    <string name="tab4">lavadora</string>
    <string name="tab5">Pc</string>

</resources>
