<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergiorr.fivewaystosaveenergy.MainActivity"
    android:background="#CDDC39">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/app_info"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView"
            style="@style/textDescription"/>
        <!--Parte Iluminacion-->
        <LinearLayout
            android:id="@+id/iluminacion"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iluView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/bombilla"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:id="@+id/textView_ilu1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:text="Iluminación"
                style="@style/headertextOptions"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView_ilu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/iluminacion"
            style="@style/textDescription"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/holo_blue_dark" />
        <!--Parte Computadoras-->
        <LinearLayout
            android:id="@+id/compu"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/compuView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:src="@drawable/computadora2"/>
            <TextView
                android:id="@+id/textView_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="Computadoras"
                style="@style/headertextOptions"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/computadora"
            style="@style/textDescription"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/holo_blue_dark" />
        <!--Parte Electrodomesticos-->
        <LinearLayout
            android:id="@+id/electro"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/Image_View_Elec"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:src="@drawable/tv2"/>
            <TextView
                android:id="@+id/textView_elec1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="Electrodomesticos"
                style="@style/headertextOptions"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView_elec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textDescription"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/electrodomestico"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/holo_blue_dark" />
        <!--Parte Nevera-->
        <LinearLayout
            android:id="@+id/refrigerador"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/Image_View_refri"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:src="@drawable/nevera2"/>
            <TextView
                android:id="@+id/textView_elec2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="Neveras"
                style="@style/headertextOptions"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textDescription"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Refrigerador"
            android:id="@+id/textView_nevera"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/holo_blue_dark" />
        <!--Parte Lavadoras-->
        <LinearLayout
            android:id="@+id/lavadora"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/Image_View_lava"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:src="@drawable/lavadora2"/>
            <TextView
                android:id="@+id/textView_lavadora1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Lavadora"
                android:layout_weight="9"
                style="@style/headertextOptions" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Lavadora"
            android:id="@+id/textView_lavadora"
            style="@style/textDescription"/>
    </LinearLayout>
</ScrollView>